safari z-index fix

--- a/src/partials/cardSearch.less
+++ b/src/partials/cardSearch.less
@@ -45,6 +45,7 @@
     margin-bottom: 2px;
     cursor: move !important;
     background-color: #E2E4E6;
+    z-index: 0;
     .title {
       cursor: pointer !important;
       color: #30364C;
