--- a/src/partials/sidebar.less
+++ b/src/partials/sidebar.less
@@ -100,6 +100,7 @@ md-bottom-sheet {
     padding: 0px;
     cursor: move !important;
     background-color: #E2E4E6;
+    z-index: 0;
     .title {
       cursor: pointer !important;
       color: #30364C;
